Fixed contact button href + Spacing

--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ img {
   gap: 5rem;
   padding-left: 8rem;
   padding-right: 8rem;
+  padding-top: 5rem;
 }
 
 #contact-container form {
